# splashy

./: .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.old  Doxyfile.in  HACKING  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  splashy.pc.in  splashy.spec
debian/: Makefile.am  Makefile.in  changelog  control  copyright  libsplashy1-dev.install  libsplashy1.install  rules  splashy-themes.install  splashy.README.Debian  splashy.install  splashy.links  splashy.manpages  splashy.postinst  splashy.postrm  splashy.preinst
doc/: .gitignore  Makefile.am  Makefile.in  config.xml.in  splashy-config.xml.pod  splashy-theme.xml.pod  splashy.pod  splashy_config.pod  splashy_update.pod  theme.xml.in
po/: ChangeLog  Makevars  POTFILES.in  br.po  de.po  es.po  fr.po  hu.po  index.html  sk.po  splashy.pot  stats.pl  update.pl
schemas/: config.xsd  theme.xsd  theme.xsl
scripts/: Makefile.am  Makefile.in  lsb-base-logging.sh
scripts/console-tools/config.d/: splashy
scripts/default/: splashy
scripts/init.d/: splashy
scripts/initramfs-tools/hooks/: .gitignore  libsplashy.in  splashy
scripts/initramfs-tools/modules.d/: splashy
scripts/initramfs-tools/scripts/init-bottom/: splashy
scripts/initramfs-tools/scripts/init-top/: splashy
scripts/initramfs-tools/scripts/local-premount/: libsplashy  splashy
src/: .gitignore  Makefile.am  Makefile.in  common_macros.h  libglib-2.0.la  splashy.h  splashy_config-functions.c  splashy_config-functions.h  splashy_config-main.c  splashy_functions.c  splashy_functions.h  splashy_main.c  splashy_update.c  splashy_video.c  splashycnf.h  xml_config.c  xml_format.h.in  xml_functions.c  xml_functions.h  xml_parser.c  xml_parser.h
